Version 0.5.3 Fixed bugs